--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,18 @@
+buildscript {
+    exp.kotlin_version = '1.7.10'
+    repositories
+    {
+        google()
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath "org.getbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.getbrains.kotlin:kotlin-gradle-plugin:4.4.2"
+        // id("com.google.gms.google-services") version "4.4.2" apply false
+    }
+}
+
 allprojects {
     repositories {
         google()
