--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.5.3
+  sdk: ^3.5.4
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -29,6 +29,11 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   dropdown_button2: ^2.3.9
+  get: ^4.6.6
+  firebase_core: ^3.7.0
+  cloud_firestore: ^5.4.5
+  otp_text_field_v2: ^1.0.3
+  get_storage: ^2.1.1
   flutter:
     sdk: flutter
 
@@ -36,11 +41,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  get: ^4.6.6
-  firebase_core: ^3.7.0
-  cloud_firestore: ^5.4.5
+  
 
 dev_dependencies:
+  build_runner: ^2.4.13
+  json_serializable: ^6.8.0
   flutter_test:
     sdk: flutter
 
