--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,15 +1,52 @@
+//buildscript {
+////    exp.kotlin_version = '1.7.10'
+//    ext.kotlin_version = '1.7.10'
+//    repositories
+//    {
+//        google()
+//        mavenCentral()
+//    }
+//
+//    dependencies {
+//        classpath "org.getbrains.kotlin:kotlin-gradle-plugin:1.9.10"
+//        classpath "org.getbrains.kotlin:kotlin-gradle-plugin:4.4.2"
+//        // id("com.google.gms.google-services") version "4.4.2" apply false
+//    }
+//}
+//
+//allprojects {
+//    repositories {
+//        google()
+//        mavenCentral()
+//    }
+//}
+//
+//rootProject.buildDir = "../build"
+//subprojects {
+//    project.buildDir = "${rootProject.buildDir}/${project.name}"
+//}
+//subprojects {
+//    project.evaluationDependsOn(":app")
+//}
+//
+//tasks.register("clean", Delete) {
+//    delete rootProject.buildDir
+//}
+//
+//
+
+
+// Project-level build.gradle file
 buildscript {
-    exp.kotlin_version = '1.7.10'
-    repositories
-    {
+    ext.kotlin_version = "1.8.10" // Define your Kotlin version here
+    repositories {
         google()
         mavenCentral()
     }
-
     dependencies {
-        classpath "org.getbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "org.getbrains.kotlin:kotlin-gradle-plugin:4.4.2"
-        // id("com.google.gms.google-services") version "4.4.2" apply false
+        classpath "com.android.tools.build:gradle:8.0.2" // Use the latest version compatible with your setup
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.google.gms:google-services:4.4.2" // Ensure compatibility with other versions
     }
 }
 
